--- a/barela_etal_2023_preprint.tex
+++ b/barela_etal_2023_preprint.tex
@@ -5,16 +5,19 @@
 \documentclass[
   ,pub,floatsintext]{apa6}
 \usepackage{amsmath,amssymb}
-\usepackage{lmodern}
 \usepackage{iftex}
 \ifPDFTeX
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
   \usepackage{textcomp} % provide euro and other symbols
 \else % if luatex or xetex
-  \usepackage{unicode-math}
+  \usepackage{unicode-math} % this also loads fontspec
   \defaultfontfeatures{Scale=MatchLowercase}
   \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
+\fi
+\usepackage{lmodern}
+\ifPDFTeX\else
+  % xetex/luatex font selection
 \fi
 % Use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
@@ -176,7 +179,7 @@
 \fi
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
-\urlstyle{same} % disable monospaced font for URLs
+\urlstyle{same}
 \hypersetup{
   pdftitle={Impulsivity as a trait in domestic dogs (Canis familiaris): A systematic review and meta-analysis},
   pdfauthor={Jessica Barela1, Yasmin Worth1, \& Jeffrey R. Stevens1},
@@ -194,11 +197,11 @@
 
 \authornote{
 
-\textbf{This preprint has been accepted for publication at the \textit{Journal of Comparative Psychology}.}
+\textbf{This preprint has been accepted for publication at the \textit{Journal of Comparative Psychology}. This paper is not the copy of record and may not exactly replicate the authoritative document published in the APA journal. The final article is available, upon publication, at: \href{https://doi.org/10.1037/com0000352}{https://doi.org/10.1037/com0000352}.}
 
-PsyArXiv: \url{https://doi.org/10.31234/osf.io/ctfns}
+PsyArXiv preprint: \url{https://doi.org/10.31234/osf.io/ctfns}
 
-Version: 2023-03-23
+Version: 2023-08-23
 
 Jeffrey R. Stevens, \orcidlink{0000-0003-2375-1360} \url{https://orcid.org/0000-0003-2375-1360}.
 
@@ -252,7 +255,7 @@ A database search was conducted on 2022-06-18 using PsychINFO, Scopus, and Web o
 \begin{figure*}
 \caption{\newline PRISMA Flowchart \label{fig:prisma}}
 \begin{center}
-\includegraphics[width=0.8\linewidth]{"figures/prisma_chart.png"}
+\includegraphics[width=0.6\linewidth]{"figures/prisma_chart.png"}
 \end{center}
 
 
@@ -348,7 +351,7 @@ After the initial database search, two reviewers (JB and YW) screened the title 
 \hypertarget{transparency-and-openness}{%
 \subsection{Transparency and Openness}\label{transparency-and-openness}}
 
-We report how we determined our sample size, all data exclusions (if any), all manipulations, and all measures in the study. We analyzed data from the project using R (Version 4.2.3; R Core Team, 2022) and the R-packages \emph{here} (Version 1.0.1; Müller, 2020), \emph{kableExtra} (Version 1.3.4; Zhu, 2021), \emph{knitr} (Version 1.42; Xie, 2015), \emph{lubridate} (Version 1.9.2; Grolemund \& Wickham, 2011), \emph{papaja} (Version 0.1.1; Aust \& Barth, 2022), \emph{PRISMA2020} (Version 1.1.1; Haddaway et al., 2022), \emph{readxl} (Version 1.4.2; Wickham \& Bryan, 2022), \emph{RoBMA} (Version 2.3.2; Bartoš \& Maier, 2020), \emph{robvis} (Version 0.3.0.900; McGuinness \& Higgins, 2020), and \emph{tidyverse} (Version 2.0.0; Wickham et al., 2019). The manuscript was created using \emph{rmarkdown} (Version 2.20, Xie et al., 2018) and \emph{papaja} (Version 0.1.1, Aust \& Barth, 2022). Data, analysis scripts, supplementary materials, and reproducible research materials are available at the Open Science Framework (\url{https://osf.io/z6svt/}). We pre-registered our design and analysis plan at the Open Science Framework (\url{https://osf.io/bsyxk}).
+We report how we determined our sample size, all data exclusions (if any), all manipulations, and all measures in the study. We analyzed data from the project using R (Version 4.3.1; R Core Team, 2022) and the R-packages \emph{here} (Version 1.0.1; Müller, 2020), \emph{kableExtra} (Version 1.3.4; Zhu, 2021), \emph{knitr} (Version 1.43; Xie, 2015), \emph{lubridate} (Version 1.9.2; Grolemund \& Wickham, 2011), \emph{papaja} (Version 0.1.1; Aust \& Barth, 2022), \emph{PRISMA2020} (Version 1.1.1; Haddaway et al., 2022), \emph{readxl} (Version 1.4.3; Wickham \& Bryan, 2022), \emph{RoBMA} (Version 3.1.0; Bartoš \& Maier, 2020), \emph{robvis} (Version 0.3.0.900; McGuinness \& Higgins, 2020), and \emph{tidyverse} (Version 2.0.0; Wickham et al., 2019). The manuscript was created using \emph{rmarkdown} (Version 2.24, Xie et al., 2018) and \emph{papaja} (Version 0.1.1, Aust \& Barth, 2022). Data, analysis scripts, supplementary materials, and reproducible research materials are available at the Open Science Framework (\url{https://osf.io/z6svt/}). We pre-registered our design and analysis plan at the Open Science Framework (\url{https://osf.io/bsyxk}).
 
 \hypertarget{data-analysis}{%
 \subsection{Data Analysis}\label{data-analysis}}
@@ -358,6 +361,13 @@ The first step in our data analysis was to convert any other types of effect siz
 Our first analysis generated a matrix of the effect sizes for all impulsivity task pairs. Within each cell of (half of) the matrix, we aggregate the correlation coefficient, sample size, and citation for each study that correlates that pair of tasks.
 
 For any cell in the table that had three or more studies in it, we conducted a robust Bayesian, model-averaged meta-analysis. We input the correlation coefficients and sample sizes into the \texttt{RoBMA()} function in the \emph{RoBMA} package (Bartoš \& Maier, 2020), using default priors (standard normal distribution on effect sizes, inverse gamma distribution with \(\alpha\) = 1 and \(\beta\) = 0.15 on heterogeneity, two two-sided weight functions with cut-points at (0.05) and (0.05, 0.10) and parameters \(\alpha\) = (1, 1) and (1, 1, 1), and the default point priors on the null hypotheses) (Bartoš et al., 2022). This function allowed us to test not only if there is evidence of an effect but also evidence for between-study heterogeneity (whether there is variation in true effect sizes across studies) and publication bias (Maier et al., 2022). This analysis used model averaging to calculate (1) a Bayesian estimate of the effect size across all studies, (2) a Bayes factor for evidence supporting the hypothesis of an effect, (3) a Bayes factor for evidence supporting the presence of between-study heterogeneity, and (4) a Bayes factor for evidence supporting the presence of publication bias (Maier et al., 2022). We set the prior hypothesis probability to 0.50 for the effect size, heterogeneity, and publication bias.
+
+\hypertarget{results}{%
+\section{Results}\label{results}}
+
+Our first analysis aggregated all of the correlation coefficients for each pair of tasks or task/DIAS pair for each study (Table \ref{tab:taskpairs}). Across 46 task/task or task/DIAS pairs, study authors reported 38 pairs as not demonstrating a statistically significant correlation and 8 pairs as demonstrating a correlation. For only the 31 task/task pairs, 28 were not correlated, while 3 were correlated. For only the 15 task/DIAS pairs, 10 were not correlated, while 5 were correlated. Thus, the vast majority of task/task pairs show no correlations. Notably, one of the three task/task correlations was between two versions of the same task: A-not-B Barrier and A-not-B Cup. Also, the other two task correlations included the Wait-for-Treat task. The task/DIAS correlation fared better with DIAS overall scores correlating with A-not-B Cup, Delay Discounting, Delay of Gratification, and Spatial Impulsivity.
+
+Only two task pairs included three or more studies, thereby meeting our criterion for conducting a formal meta-analysis. Because one of those pairs (Spatial Impulsivity and DIAS) has recently had a meta-analysis conducted, with new studies published after our search deadline (Stevens et al., 2022), we did not conduct a meta-analysis for that pair. To summarize Stevens et al. (2022), two out of six studies found a correlation between Spatial Impulsivity and DIAS scores. A Bayesian, model-averaged meta-analysis found anecdotal evidence of no correlation between Spatial Impulsivity and DIAS scores, but further studies are needed to confirm this result.
 
 \begin{landscape}\begin{table}
 
@@ -399,16 +409,9 @@ Spatial Impulsivity &  &  &  &  &  &  &  &  & \textbf{$r_{(24)}$=0.46 [1]*},\new
 \end{table}
 \end{landscape}
 
-\hypertarget{results}{%
-\section{Results}\label{results}}
-
-Our first analysis aggregated all of the correlation coefficients for each pair of tasks or task/DIAS pair for each study (Table \ref{tab:taskpairs}). Across 46 task/task or task/DIAS pairs, study authors reported 38 pairs as not demonstrating a statistically significant correlation and 8 pairs as demonstrating a correlation. For only the 31 task/task pairs, 28 were not correlated, while 3 were correlated. For only the 15 task/DIAS pairs, 10 were not correlated, while 5 were correlated. Thus, the vast majority of task/task pairs show no correlations. Notably, one of the three task/task correlations was between two versions of the same task: A-not-B Barrier and A-not-B Cup. Also, the other two task correlations included the Wait-for-Treat task. The task/DIAS correlation fared better with DIAS overall scores correlating with A-not-B Cup, Delay Discounting, Delay of Gratification, and Spatial Impulsivity.
-
-Only two task pairs included three or more studies, thereby meeting our criterion for conducting a formal meta-analysis. Because one of those pairs (Spatial Impulsivity and DIAS) has recently had a meta-analysis conducted, with new studies published after our search deadline (Stevens et al., 2022), we did not conduct a meta-analysis for that pair. To summarize Stevens et al. (2022), two out of six studies found a correlation between Spatial Impulsivity and DIAS scores. A Bayesian, model-averaged meta-analysis found anecdotal evidence of no correlation between Spatial Impulsivity and DIAS scores, but further studies are needed to confirm this result.
-
 The other task pair with more than two studies was A-not-B Cup and Cylinder. None of the seven studies that tested both of these tasks on the same dog reported a statistically significant correlation. Robust Bayesian meta-analysis found moderate evidence against the effect, \(BF_{10}\) = 0.270, with mean model-averaged estimate correlation = -0.017, 95\% CI {[}-0.200, 0.034{]}. Robust Bayesian meta-analysis found weak evidence against the heterogeneity, \(BF_{10}\) = 0.563, with mean model-averaged estimate tau = 0.028, 95\% CI {[}0.000, 0.171{]} and moderate evidence against publication bias, \(BF_{10}\) = 0.284. Thus, there was no evidence for a correlation in responses between the A-not-B Cup and Cylinder tasks (Figure \ref{fig:forest}). Further, there was no evidence for publication bias favoring studies that found a correlation. Even when correcting for publication bias, the conditional PET-PEESE estimate of the overall effect does not differ from 0 (\textbf{PET}-PEESE: 0.013 {[}0.000, 0.140{]}). And there was weak evidence against between-study heterogeneity, suggesting that the effect sizes are relatively homogeneous across studies, despite using different measures within the tasks.
 
-\begin{figure*}
+\begin{figure*}[h]
 \caption{\newline Meta-Analysis Forest Plot for A-not-B Cup and Cylinder Tasks \label{fig:forest}}
 \begin{center}
 \includegraphics[width=0.8\linewidth]{"figures/anotb-cylinder-forestplot.png"}
@@ -738,11 +741,11 @@ Wingrove, J., \& Bond, A. J. (1997). Impulsivity: {A} state as well as trait var
 \leavevmode\vadjust pre{\hypertarget{ref-Winstanley.etal.2006}{}}%
 Winstanley, C. A., Eagle, D. M., \& Robbins, T. W. (2006). Behavioral models of impulsivity in relation to {ADHD}: Translation between clinical and preclinical studies. \emph{Clinical Psychology Review}, \emph{26}(4), 379--395. \url{https://doi.org/10.1016/j.cpr.2006.01.001}
 
-\leavevmode\vadjust pre{\hypertarget{ref-Wright.etal.2012a}{}}%
-Wright, H. F., Mills, D. S., \& Pollux, P. M. J. (2012). Behavioural and physiological correlates of impulsivity in the domestic dog ({\emph{Canis}}{ \emph{familiaris}}). \emph{Physiology \& Behavior}, \emph{105}(3), 676--682. \url{https://doi.org/10.1016/j.physbeh.2011.09.019}
-
 \leavevmode\vadjust pre{\hypertarget{ref-Wright.etal.2011b}{}}%
 Wright, H. F., Mills, D. S., \& Pollux, P. M. J. (2011). Development and validation of a psychometric tool for assessing impulsivity in the domestic dog ({\emph{Canis}}{ \emph{familiaris}}). \emph{International Journal of Comparative Psychology}, \emph{24}(2). \url{https://doi.org/10.46867/IJCP.2011.24.02.03}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Wright.etal.2012a}{}}%
+Wright, H. F., Mills, D. S., \& Pollux, P. M. J. (2012). Behavioural and physiological correlates of impulsivity in the domestic dog ({\emph{Canis}}{ \emph{familiaris}}). \emph{Physiology \& Behavior}, \emph{105}(3), 676--682. \url{https://doi.org/10.1016/j.physbeh.2011.09.019}
 
 \leavevmode\vadjust pre{\hypertarget{ref-R-knitr}{}}%
 Xie, Y. (2015). \emph{Dynamic documents with {R} and knitr} (2nd ed.). Chapman; Hall/CRC. \url{https://yihui.org/knitr/}
